Refactoring of code to use StructuredConcurrency(Preview Feature).
Also, simplified cancellation to avoid returning results of type paused ect. Instead, everything is canceled through
interruption.

Signed-off-by: barracuda <dimitrijchannel@gmail.com>